ajout d'interface profile et changement du detaille utilisateur